fix: Prevent brand name from wrapping

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,6 +17,7 @@ html, body {
 
 .navbar-default .navbar-brand {
     color: white;
+    white-space:nowrap
 }
 
 .wrapper {
